Add ContractorApiOptions for describing in appsettings; fix some text in cshtml

--- a/ContractorApi/ContractorApiClient/Pages/ContractorList/Create.cshtml
+++ b/ContractorApi/ContractorApiClient/Pages/ContractorList/Create.cshtml
@@ -3,7 +3,7 @@
 
 
 <br />
-<h2 class="text-info">Create New Conractor</h2>
+<h2 class="text-info">Create a new conractor</h2>
 <br />
 
 <div class="border container" style="padding:30px;">
