--- a/ContractorApi/ContractorApiClient/Pages/ContractorList/Index.cshtml
+++ b/ContractorApi/ContractorApiClient/Pages/ContractorList/Index.cshtml
@@ -5,10 +5,10 @@
 <br />
 <div class="container row p-0 m-0">
     <div class="col-8">
-        <h2 class="text-info">Contractor List</h2>
+        <h2 class="text-info">Contractor list</h2>
     </div>
     <div class="col-4">
-        <a asp-page="Create" class="btn btn-info form-control text-white">Create new contractor</a>
+        <a asp-page="Create" class="btn btn-info form-control text-white">Create a new contractor</a>
     </div>
 
     <div class="col-12 border p-3 mt-3">
