--- a/ContractorApi/ContractorApiClient/Pages/ContractorList/Edit.cshtml
+++ b/ContractorApi/ContractorApiClient/Pages/ContractorList/Edit.cshtml
@@ -4,7 +4,7 @@
 
 
 <br />
-<h2 class="text-info">Edit Conractor</h2>
+<h2 class="text-info">Edit conractor</h2>
 <br />
 
 <div class="border container" style="padding:30px;">
